add selection option to view responses to different data types. add image loading

--- a/app/src/main/res/layout/activity_main_directory.xml
+++ b/app/src/main/res/layout/activity_main_directory.xml
@@ -4,14 +4,46 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/vRefresh"
-        android:layout_height="0dp"
+    <FrameLayout
         android:layout_width="0dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="0dp"
+        android:background="@color/color_off_white"
+        android:elevation="4dp"
+        app:layout_constraintBottom_toBottomOf="@id/vSpinner"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvSelectData"
+        style="@style/Widget.EmployeeDirectory.TextView.Label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/spacing_small"
+        android:elevation="4dp"
+        android:text="@string/select_data"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/vSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvSelectData" />
+
+    <com.treyherman.employeedirectory.view.widget.EmployeeDirectoryRefreshLayout
+        android:id="@+id/vRefresh"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:backgroundTint="@color/color_red"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/vSpinner">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvEmployees"
@@ -19,7 +51,7 @@
             android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </com.treyherman.employeedirectory.view.widget.EmployeeDirectoryRefreshLayout>
 
     <ProgressBar
         android:id="@+id/vProgress"
