--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_off_white">#FFFCFF</color>
+    <color name="color_white">#FFFFFF</color>
+    <color name="color_off_white">#F8F9F9</color>
     <color name="color_blue">#247BA0</color>
     <color name="color_blue_dark">#34528A</color>
+    <color name="color_blue_darkest">#17316C</color>
     <color name="color_red">#8B575C</color>
 </resources>
