--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,7 @@
         <item name="colorOnPrimarySurface">@color/color_blue_dark</item>
         <item name="colorOnSurface">@color/color_blue_dark</item>
         <item name="colorOnPrimary">@color/color_off_white</item>
+        <item name="android:textViewStyle">@style/Widget.EmployeeDirectory.TextView.Paragraph</item>
         <item name="cardViewStyle">@style/Widget.EmployeeDirectory.CardView</item>
     </style>
 </resources>
