--- a/app/src/main/res/layout/activity_main_directory.xml
+++ b/app/src/main/res/layout/activity_main_directory.xml
@@ -53,6 +53,17 @@
 
     </com.treyherman.employeedirectory.view.widget.EmployeeDirectoryRefreshLayout>
 
+    <com.treyherman.employeedirectory.view.widget.EmptyContentLayout
+        android:id="@+id/vEmptyContent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/vSpinner"
+        app:layout_constraintVertical_bias="0.4" />
+
     <ProgressBar
         android:id="@+id/vProgress"
         android:layout_width="wrap_content"
